--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -5,21 +5,15 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        flex-direction: row;
         height: 100vh;
         opacity: 5;
     }
 
-
     h1 {
         margin: 100px;
     }
+
 </style>
 
-<h1>HOME PAGE</h1>
-
-
-
-
-
-
-
+<h1>ABOUT PAGE</h1>
