--- a/app/views/welcome/contact.html.erb
+++ b/app/views/welcome/contact.html.erb
@@ -9,17 +9,12 @@
         opacity: 5;
     }
 
-
     h1 {
-        margin: 100px;
+        margin: 80px;
     }
+
+
 </style>
-
-<h1>HOME PAGE</h1>
-
-
-
-
-
+<h1>CONTACT PAGE</h1>
 
 
