--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -1,19 +1,16 @@
-<style>
+<div class="box">
+  <h1>Want to know us more?</h1>
+  <%= image_tag "cutie.png" %>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias
+    illum, animi earum ea amet sequi reiciendis sit corporis sunt
+    iusto cupiditate odio maxime adipisci cumque eligendi nemo
+    dolore id itaque?</p>
+</div>
 
-    body {
-        background: url("https://c8.alamy.com/comp/2C4Y48H/bunch-of-fresh-lavender-flowers-decorated-with-lilac-ribbon-violet-flowers-greeting-floral-card-with-place-for-text-top-view-copy-space-2C4Y48H.jpg") no-repeat center center/cover;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: row;
-        height: 100vh;
-        opacity: 5;
-    }
 
-    h1 {
-        margin: 100px;
-    }
 
-</style>
 
-<h1>ABOUT PAGE</h1>
+
+
+
+
