--- a/app/views/welcome/contact.html.erb
+++ b/app/views/welcome/contact.html.erb
@@ -1,20 +1,38 @@
-<style>
+<div class="box">
+  <section id="contact-form" class="py-3">
+    <h1>Want to connect with us?</h1>
+    <div class="container">
+      <p>Please fill out the form below to contact us</p>
+      <form action="process.php">
+        <div class="form-group">
+          <label for="name">Name</label>
+          <input type="text" name="name" id="name">
+        </div>
+        <div class="form-group">
+          <label for="email">Email</label>
+          <input type="text" name="email" id="email">
+        </div>
+        <div class="form-group">
+          <label for="subject">Subject</label>
+          <input type="text" name="subject" id="subject">
+        </div>
+        <div class="form-group">
+          <label for="message">Message</label>
+          <textarea name="message" id="message"></textarea>
+        </div>
+        <button type="submit" class="btn">Submit</button>
+      </form>
 
-    body {
-        background: url("https://c8.alamy.com/comp/2C4Y48H/bunch-of-fresh-lavender-flowers-decorated-with-lilac-ribbon-violet-flowers-greeting-floral-card-with-place-for-text-top-view-copy-space-2C4Y48H.jpg") no-repeat center center/cover;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        height: 100vh;
-        opacity: 5;
-    }
 
-    h1 {
-        margin: 80px;
-    }
+    </div>
+  </section>
+</div>
 
 
-</style>
-<h1>CONTACT PAGE</h1>
+
+
+
+
+
 
 
