--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,25 +1,10 @@
-<style>
-
-    body {
-        background: url("https://c8.alamy.com/comp/2C4Y48H/bunch-of-fresh-lavender-flowers-decorated-with-lilac-ribbon-violet-flowers-greeting-floral-card-with-place-for-text-top-view-copy-space-2C4Y48H.jpg") no-repeat center center/cover;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        height: 100vh;
-        opacity: 5;
-    }
-
-
-    h1 {
-        margin: 100px;
-    }
-</style>
-
-<h1>HOME PAGE</h1>
-
-
-
-
+<div class="box">
+  <h1 class="image"><%= image_tag "wave.png" %></h1>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias
+    illum, animi earum ea amet sequi reiciendis sit corporis sunt
+    iusto cupiditate odio maxime adipisci cumque eligendi nemo
+    dolore id itaque?</p>
+</div>
 
 
 
