--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,5 +1,4 @@
 <div class="box">
-  <h1>New Post</h1>
+  <h1>Edit Post id: <%= @post.id %></h1>
   <%= render partial: 'form', locals: { post: @post } %>
-
 </div>
