--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,47 +1,63 @@
-
 <style>
-    table, thead, td {
-        border: 1px solid;
+    .table-container {
+        height: 500px;
+        width: 1000px;
+        max-width: 100%;
+        border: 1px solid #ccc;
+        overflow: auto;
+        box-sizing: border-box;
     }
 
-    td {
-        padding: 10px;
+    h3 {
+        text-align: left;
+        font-size: 50px;
+        font-family: "Helvetica Neue", Helvetica, Arial;
     }
 
-    thead {
-        text-align: center;
+    .add-new-post{
+        margin: 5px;
+        width: 95% ;
     }
 
 
-    table {
-        margin: auto;
-        width: 70vh;
-        height: 50vh;
-    }
+
 </style>
 
-
-
-
+<h3>Post List</h3>
 <div class="box">
 
+  <div class="add-new-post">
+    <%= link_to 'Add New Post', new_post_path, class: 'btn btn-success' %>
+  </div>
   <div id="posts" class="d-flex flex-column">
-    <h1>Post List</h1>
 
-    <table>
-      <thead>
-      <td>Title</td>
-      <td>Content</td>
-      <td>Action</td>
-      </thead>
-      <% @posts.each do |post| %>
+    <div class="table-container">
+      <table>
+        <thead>
         <tr>
-          <td><%= post.title %></td>
-          <td><%= post.content %></td>
-          <td></td>
+          <td>Title</td>
+          <td> Content</td>
+          <td>Created at</td>
+          <td>Updated at</td>
+          <td>Action</td>
         </tr>
-      <% end %>
-    </table>
+        </thead>
+        <% @posts.each do |post| %>
+          <tr>
+            <td><%= post.title %></td>
+            <td><%= post.content %></td>
+            <td><%= post.created_at %></td>
+            <td><%= post.updated_at %></td>
+            <td class="button">
+              <%= link_to 'Show', post_path(post), class: 'btn btn-primary' %>
+              <%= link_to 'Edit', edit_post_path(post), class: 'btn btn-warning' %>
+              <%= button_to 'Delete', post_path(post), method: :delete, class: 'btn btn-danger' %>
+            </td>
+            <td></td>
+          </tr>
+        <% end %>
+      </table>
+    </div>
   </div>
 </div>
 
