--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
           display: inline-block;
           font-size: 18px;
           color: black;
-          background: linear-gradient(purple, violet);;
+          background: linear-gradient(purple, violet, purple);;
           padding: 13px 20px;
           cursor: pointer;
           margin: 5px;
@@ -103,16 +103,6 @@
           border: 2px red solid;
       }
 
-      /*
-      style 3 -contact
-      .box {
-          background: violet;
-          align-items: center;
-          justify-content: center;
-          height: 85vh;
-          display: flex;
-          flex-direction: column;
-      } */
 
       .box {
           background: violet;
@@ -123,6 +113,17 @@
           flex-direction: column;
 
       }
+
+      .box-posts {
+          background: violet;
+          align-items: center;
+          justify-content: center;
+          height: 100vh;
+          display: flex;
+          flex-direction: column;
+
+      }
+
 
       .con {
           text-align: center;
@@ -210,6 +211,20 @@
           height: 50vh;
       }
 
+      .table-container {
+          height: 500px;
+          width: 1000px;
+          max-width: 100%;
+          border: 1px solid #ccc;
+          overflow: auto;
+          box-sizing: border-box;
+      }
+
+      h3 {
+          text-align: left;
+          font-size: 50px;
+          font-family: "Helvetica Neue", Helvetica, Arial;
+      }
 
   </style>
 </head>
