--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,5 +1,3 @@
-
-
 <h3>Post List</h3>
 <div class="add-new-post">
   <%= link_to 'Add New Post', new_post_path, class: 'btn btn-success' %>
@@ -21,6 +19,11 @@
         <%= form.label :end_date, class: 'form-label' %>
         <%= form.date_field :end_date, value: params[:end_date], class: 'form-control' %>
       </div>
+      <div class="mb-3">
+        <%= form.label :published, class: 'form-label' %>
+        <%= form.check_box :published, value: params[:published], class: 'form-check-input' %>
+      </div>
+
       <%= form.submit 'Search', class: 'btn btn-sm btn-primary' %>
     <% end %>
   </div>
@@ -36,6 +39,7 @@
           <td> Content</td>
           <td>Created at</td>
           <td>Updated at</td>
+          <td>Published (true or false)?</td>
           <td>Action</td>
         </tr>
         </thead>
@@ -45,12 +49,12 @@
             <td><%= post.content %></td>
             <td><%= post.created_at %></td>
             <td><%= post.updated_at %></td>
+            <td><%= post.published %></td>
             <td class="button">
               <%= link_to 'Show', post_path(post), class: 'btn btn-primary' %>
               <%= link_to 'Edit', edit_post_path(post), class: 'btn btn-warning' %>
               <%= button_to 'Delete', post_path(post), method: :delete, class: 'btn btn-danger' %>
             </td>
-            <td></td>
           </tr>
         <% end %>
       </table>
