Updated the Feedback

--- a/app/views/feedbacks/new.html.erb
+++ b/app/views/feedbacks/new.html.erb
@@ -17,7 +17,7 @@
 
           <div class="field form-group">
             <%= form.label :subject %>
-            <%= form.text_field :subject %>
+            <%= form.text_field :subjetc %>
           </div>
 
           <div class="field form-group">
@@ -26,10 +26,10 @@
           </div>
 
 
-
           <div class="actions">
             <%= form.submit "Submit Feedback" %>
           </div>
+
         </form>
 
 
@@ -37,6 +37,22 @@
     </section>
   </div>
 <% end %>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
