--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -39,7 +39,7 @@
           <td> Content</td>
           <td>Created at</td>
           <td>Updated at</td>
-          <td>Published (true or false)?</td>
+          <td>Published</td>
           <td>Action</td>
         </tr>
         </thead>
