--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,8 +1,14 @@
+<style>
+    .error {
+        display: flex;
+        flex-direction: column;
+    }
+</style>
 <%= form_with model: post do |form| %>
   <% if post.errors.any? %>
-    <ul>
+    <ul class="error">
       <% post.errors.each do |error| %>
-          <li><%= error.full_message %></li>
+        <li><%= error.full_message %></li>
       <% end %>
     </ul>
   <% end %>
