--- a/app/views/welcome/contact.html.erb
+++ b/app/views/welcome/contact.html.erb
@@ -1,33 +1,6 @@
-<!--<div class="box">-->
-<!--  <section id="contact-form" class="py-3">-->
-<!--    <h1>Want to connect with us?</h1>-->
-<!--    <div class="container">-->
-<!--      <p>Please fill out the form below to contact us</p>-->
-<!--      <form action="process.php">-->
-<!--        <div class="form-group">-->
-<!--          <label for="name">Name</label>-->
-<!--          <input type="text" name="name" id="name">-->
-<!--        </div>-->
-<!--        <div class="form-group">-->
-<!--          <label for="email">Email</label>-->
-<!--          <input type="text" name="email" id="email">-->
-<!--        </div>-->
-<!--        <div class="form-group">-->
-<!--          <label for="subject">Subject</label>-->
-<!--          <input type="text" name="subject" id="subject">-->
-<!--        </div>-->
-<!--        <div class="form-group">-->
-<!--          <label for="message">Message</label>-->
-<!--          <textarea name="message" id="message"></textarea>-->
-<!--        </div>-->
-<!--        <button type="submit" class="btn">Submit</button>-->
-<!--      </form>-->
-
-
-<!--    </div>-->
-<!--  </section>-->
-<!--</div>-->
-
+<div class="add-new-post">
+  <%= link_to 'Add New Feedback', contact_path, class: 'btn btn-success' %>
+</div>
 <%= form_with model: @feedback, url: feedbacks_path do |form| %>
   <div class="box ">
     <section id="contact-form" class="py-3">
