--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -117,11 +117,12 @@
 
       }
 
+
       .box-feedback {
           background: violet;
           align-items: center;
           justify-content: center;
-          height: 120vh;
+          height: 130vh;
           display: flex;
           flex-direction: column;
       }
@@ -228,6 +229,74 @@
           font-size: 50px;
           font-family: "Helvetica Neue", Helvetica, Arial;
       }
+
+      li {
+          margin: auto;
+      }
+
+      .error {
+          display: flex;
+          flex-direction: column;
+      }
+
+
+      .box ul {
+          display: flex;
+          flex-direction: column;
+      }
+
+      .box ul li {
+          margin: auto 30px;
+      }
+
+      .form-check {
+          width: 7%;
+          height: 7%;
+      }
+
+
+      .box-contact-form {
+          background: violet;
+          align-items: center;
+          justify-content: center;
+          height: 100vh;
+          display: flex;
+          flex-direction: column;
+
+      }
+
+      .letter1 {
+          display: flex;
+          flex-direction: row;
+      }
+
+      .letter2 {
+          display: flex;
+          flex-direction: row;
+          width: 100px;
+          height: 150px;
+          text-align: center;
+      }
+
+      .btn-5 {
+          display: inline-block;
+          font-size: 18px;
+          color: black;
+          background: linear-gradient(purple, violet, purple);;
+          padding: 13px 20px;
+          cursor: pointer;
+          margin: 5px;
+          width: 200px;
+          border: none;
+          text-decoration: none;
+      }
+
+      .btn-5:hover {
+          background: transparent;
+          color: black;
+
+      }
+
 
   </style>
 </head>
