--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -15,6 +15,10 @@
     <%= form.text_field :content %>
   </div>
 
+  <div>
+    <%= form.collection_check_boxes :category_ids, Category.all, :id, :name %>
+  </div>
+
   <div class="field">
     <%= form.label 'Published' %>
     <%= form.check_box :published %>
