Update comment order and Add Kaminari Gems

--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -35,6 +35,7 @@
     <%= link_to 'Post List', posts_path, class: 'btn btn-warning' %>
     <%= link_to 'New Comment', new_post_comment_path, class: 'btn btn-warning' %>
   </div>
+  <div class="paginate"><%= paginate @comments %></div>
 </div>
 
 
