--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -289,7 +289,7 @@
           display: inline-block;
           font-size: 18px;
           color: black;
-          background: linear-gradient(purple, violet, purple);;
+          background: linear-gradient(purple, violet, purple);
           padding: 13px 20px;
           cursor: pointer;
           margin: 5px;
@@ -313,6 +313,31 @@
           display: flex;
           flex-direction: column;
       }
+
+      .pagination {
+          list-style: none;
+          display: flex;
+          justify-content: center;
+      }
+
+      .pagination li {
+          margin: 5px 8px;
+      }
+
+      .pagination a {
+          padding: 5px 10px;
+          border: 1px solid #ccc;
+          text-decoration: none;
+          color: purple;
+          border-radius: 3px;
+      }
+
+      .pagination .active a {
+          background: linear-gradient(purple, violet, purple);
+          border: 1px solid black;
+          color: #fff;
+      }
+
   </style>
 </head>
 
