--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -19,11 +19,11 @@
       <tbody>
       <% @comments.each do |comment| %>
         <tr>
-          <td><%= comment.content %></td>
+          <td><%= comment.content %> by <%= comment.user&.email %> </td>
           <td><%= comment.created_at.strftime("%B %d, %Y at %I:%M %p") %></td>
           <td class="button column">
-            <%= link_to 'Edit Comment', edit_post_comment_path(@post, comment), class: 'btn btn-primary' %>
-            <%= button_to 'Delete Comment', post_comment_path(@post, comment), class: 'btn btn-primary', method: :delete %>
+              <%= link_to 'Edit Comment', edit_post_comment_path(@post, comment), class: 'btn btn-primary' if user_signed_in? && comment.user == current_user %>
+              <%= button_to 'Delete Comment', post_comment_path(@post, comment), class: 'btn btn-primary', method: :delete if user_signed_in? && comment.user == current_user%>
           </td>
         </tr>
       <% end %>
