--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -373,6 +373,13 @@
         <li>
           <%= link_to 'Posts', posts_path, class: "nav-link #{'active' if action_name == 'posts' }", 'aria-current': 'page' %>
         </li>
+        <li>
+          <% if user_signed_in? %>
+            <%= link_to 'Sign Out', destroy_user_session_path, data: { 'turbo-method': :delete }, class: "nav-link #{'active' if action_name == 'sign in' }", 'aria-current': 'page' %>
+          <% else %>
+            <%= link_to 'Sign In', new_user_session_path, class: "nav-link #{'active' if action_name == 'sign in' }", 'aria-current': 'page' %>
+          <% end %>
+        </li>
       </ul>
     </div>
   </nav>
