--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -338,6 +338,42 @@
           color: #fff;
       }
 
+      .container-facts {
+          border: 1px solid;
+          width: 530px;
+      }
+
+      .cat_fact-user {
+          background-color: lavender;
+          text-align: center;
+      }
+
+      .container-each {
+          overflow-y: auto;
+      }
+
+      .margin-column {
+          display: grid;
+          grid-template-columns:50% 50%;
+
+      }
+
+      .mb-3-filter {
+          display: grid;
+          grid-template-columns:40% 33% 33%;
+          align-items: center;
+          margin-bottom: 30px;
+      }
+
+      .margin-column div {
+          margin: auto;
+      }
+
+      .fact {
+          margin: 10px;
+      }
+
+
   </style>
 </head>
 
