--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -36,6 +36,7 @@
         <thead>
         <tr>
           <td>Author</td>
+          <td>Name</td>
           <td>Title</td>
           <td> Content</td>
           <td>Created at</td>
@@ -48,6 +49,7 @@
         <% @posts.each do |post| %>
           <tr>
             <td><%= post.user&.email %></td>
+            <td><%= post.user&.name %></td>
             <td><%= post.title %></td>
             <td><%= post.content %></td>
             <td><%= post.created_at %></td>
