--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -373,7 +373,56 @@
           margin: 10px;
       }
 
+      .star {
+          border: 1px solid #000;
+          background-color: #9ec5fe;
+          width: 800px;
+          padding: 20px;
+          margin: 20px;
+          box-shadow: 3px 3px 5px #888888;
+      }
 
+      .address_field {
+          width: 100%;
+      }
+
+      h5 {
+          font-size: 16px;
+          margin-top: 15px;
+      }
+
+      .profile-image {
+          display: block;
+          margin: 0 auto;
+      }
+
+      .box {
+          display: flex;
+          justify-content: center;
+      }
+
+      .column-random {
+          display: grid;
+          grid-template-columns:30% 50%;
+      }
+
+      .random-user {
+          margin-left: 120px;
+          font-family: script;
+      }
+
+      .random-name {
+          display: grid;
+          grid-template-columns:50% 50%;
+      }
+
+      .ipify {
+          border: 1px solid;
+          background-color: #8bb9fe;
+          display: flex;
+          justify-content: right;
+          align-content: start;
+      }
   </style>
 </head>
 
