--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -19,10 +19,10 @@
         <%= form.label :end_date, class: 'form-label' %>
         <%= form.date_field :end_date, value: params[:end_date], class: 'form-control' %>
       </div>
-<!--      <div class="mb-3">-->
-        <%#= form.label :published, class: 'form-label' %>
-        <%#= form.check_box :published, value: params[:published], class: 'form-check-input' %>
-<!--      </div>-->
+      <div class="form-group">
+        <%= form.label :status, class: 'form-label' %>
+        <%= form.select(:status, options_for_select([['Published', 'published'], ['Unpublished', 'unpublished'], ['Archived', 'archived']], params[:status]), { include_blank: 'Select Status' }, class: 'form-control') %>
+      </div>
 
       <%= form.submit 'Search', class: 'btn btn-sm btn-primary' %>
     <% end %>
