--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -447,34 +447,41 @@
 
       <ul>
         <li>
-          <%= link_to 'Home', root_path, class: "nav-link #{'active' if action_name == 'index' }", 'aria-current': 'page' %>
+          <%= link_to t( 'home'), root_path, class: "nav-link #{'active' if action_name == 'index' }", 'aria-current': 'page' %>
         </li>
         <li>
-          <%= link_to 'About', about_path, class: "nav-link #{'active' if action_name == 'about' }", 'aria-current': 'page' %>
+          <%= link_to t( 'about'), about_path, class: "nav-link #{'active' if action_name == 'about' }", 'aria-current': 'page' %>
         </li>
         <li>
-          <%= link_to 'Contact', new_feedback_path, class: "nav-link #{'active' if action_name == 'contact' }", 'aria-current': 'page' %>
+          <%= link_to t( 'contact'), new_feedback_path, class: "nav-link #{'active' if action_name == 'contact' }", 'aria-current': 'page' %>
         </li>
         <li>
-          <%= link_to 'Posts', posts_path, class: "nav-link #{'active' if action_name == 'posts' }", 'aria-current': 'page' %>
+          <%= link_to t( 'posts'), posts_path, class: "nav-link #{'active' if action_name == 'posts' }", 'aria-current': 'page' %>
         </li>
         <li>
-          <%= link_to 'Cat Facts', cat_facts_path, class: "nav-link #{'active' if action_name == 'posts' }", 'aria-current': 'page' if user_signed_in? %>
+          <%= link_to t( 'cat_facts'), cat_facts_path, class: "nav-link #{'active' if action_name == 'cat_facts' }", 'aria-current': 'page' if user_signed_in? %>
+        </li>
+        <li>
+          <%= link_to t( 'english'), params.permit!.merge(locale: 'en'), class: "nav-link #{'active' if action_name == 'posts' }", 'aria-current': 'page' %>
+        </li>
+        <li>
+          <%= link_to t( 'tagalog'), params.permit!.merge(locale: 'tl'), class: "nav-link #{'active' if action_name == 'posts' }", 'aria-current': 'page' %>
+        </li>
+        <li>
+          <%= link_to t( 'mandarin'), params.permit!.merge(locale: 'zh-CN'), class: "nav-link #{'active' if action_name == 'posts' }", 'aria-current': 'page' %>
         </li>
         <li>
           <% if user_signed_in? %>
-            <%= link_to 'Sign Out', destroy_user_session_path, data: { 'turbo-method': :delete }, class: "nav-link #{'active' if action_name == 'sign in' }", 'aria-current': 'page' %>
+            <%= link_to t( 'sign_in'), destroy_user_session_path, data: { 'turbo-method': :delete }, class: "nav-link #{'active' if action_name == 'sign in' }", 'aria-current': 'page' %>
           <% else %>
-            <%= link_to 'Sign In', new_user_session_path, class: "nav-link #{'active' if action_name == 'sign in' }", 'aria-current': 'page' %>
+            <%= link_to t( 'sign_out'), new_user_session_path, class: "nav-link #{'active' if action_name == 'sign in' }", 'aria-current': 'page' %>
           <% end %>
         </li>
       </ul>
     </div>
   </nav>
 </header>
-
 <%= render 'layouts/header' %>
-
 </body>
 </html>
 
