--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,6 @@
-<h3>Post List</h3>
+<h3><%= t('post_list') %></h3>
 <div class="add-new-post">
-  <%= link_to 'Add New Post', new_post_path, class: 'btn btn-success' %>
+  <%= link_to t( 'add_new_post'), new_post_path, class: 'btn btn-success' %>
 </div>
 
 <div class="box-posts">
@@ -8,23 +8,23 @@
   <div class="container">
     <%= form_with url: posts_path, method: :get do |form| %>
       <div class="mb-3">
-        <%= form.label :title, class: 'form-label' %>
+        <%= form.label t( 'title'), class: 'form-label' %>
         <%= form.text_field :title, value: params[:title], class: 'form-control' %>
       </div>
       <div class="mb-3">
-        <%= form.label :start_date, class: 'form-label' %>
+        <%= form.label t( 'start_date'), class: 'form-label' %>
         <%= form.date_field :start_date, value: params[:start_date], class: 'form-control' %>
       </div>
       <div class="mb-3">
-        <%= form.label :end_date, class: 'form-label' %>
+        <%= form.label t( 'end_date'), class: 'form-label' %>
         <%= form.date_field :end_date, value: params[:end_date], class: 'form-control' %>
       </div>
       <div class="form-group">
-        <%= form.label :status, class: 'form-label' %>
-        <%= form.select(:status, options_for_select([['Published', 'published'], ['Unpublished', 'unpublished'], ['Archived', 'archived']], params[:status]), { include_blank: 'Select Status' }, class: 'form-control') %>
+        <%= form.label t( 'status'), class: 'form-label' %>
+        <%= form.select(:status, options_for_select([[t( 'published'), 'published'], [t( 'unpublished'), 'unpublished'], [t( 'archived'), 'archived']], params[:status]), { include_blank: t( 'select_status') }, class: 'form-control') %>
       </div>
 
-      <%= form.submit 'Search', class: 'btn btn-sm btn-primary' %>
+      <%= form.submit t( 'search'), class: 'btn btn-sm btn-primary' %>
     <% end %>
   </div>
 
@@ -35,23 +35,23 @@
       <table>
         <thead>
         <tr>
-          <td>Author</td>
-          <td>Name</td>
-          <td>Title</td>
-          <td> Content</td>
-          <td>Created at</td>
-          <td>Updated at</td>
-          <td>Category</td>
-          <td>Status</td>
-          <td>Address</td>
-          <td>Action</td>
+          <td><%= Post.human_attribute_name(:author) %></td>
+          <td><%= Post.human_attribute_name(:name) %></td>
+          <td><%= Post.human_attribute_name(:title) %></td>
+          <td><%= Post.human_attribute_name(:content) %></td>
+          <td><%= Post.human_attribute_name(:created_at) %></td>
+          <td><%= Post.human_attribute_name(:updated_at) %></td>
+          <td><%= Post.human_attribute_name(:category) %></td>
+          <td><%= Post.human_attribute_name(:status) %></td>
+          <td><%= Post.human_attribute_name(:address) %></td>
+          <td><%= Post.human_attribute_name(:action) %></td>
         </tr>
         </thead>
         <% @posts.each do |post| %>
           <tr>
             <td data-controller="clipboard">
               <span data-clipboard-target="email"><%= post.user&.email %></span>
-              <button data-clipboard-target="copyButton" data-action="click->clipboard#copy" class="notice btn btn-sm btn-dark">copy</button>
+              <button data-clipboard-target="copyButton" data-action="click->clipboard#copy" class="notice btn btn-sm btn-dark"><%= t( 'copy')%></button>
             </td>
             <td><%= post.user&.name %></td>
             <td><%= post.title %></td>
@@ -62,17 +62,17 @@
             <td><%= post.status %></td>
             <td><%= "#{post&.region&.name}, #{post&.province&.name}, #{post&.city&.name}, #{post&.barangay&.name}, #{post.address}" %></td>
             <td class="button">
-              <%= link_to 'Show', post_path(post), class: 'btn btn-primary' %>
+              <%= link_to t( 'show'), post_path(post), class: 'btn btn-primary' %>
               <% if user_signed_in? && post.user == current_user %>
-                <%= link_to 'Edit', edit_post_path(post), class: 'btn btn-warning' %>
-                <%= button_to 'Delete', post_path(post), method: :delete, class: 'btn btn-danger' %>
+                <%= link_to t( 'edit'), edit_post_path(post), class: 'btn btn-warning' %>
+                <%= button_to t( 'delete'), post_path(post), method: :delete, class: 'btn btn-danger' %>
               <% end %>
-              <%= link_to 'Comments', post_comments_path(post), class: 'btn btn-warning' %>
-              <%= link_to 'New Comment', new_post_comment_path(post), class: 'btn btn-warning' %>
+              <%= link_to t('comments'), post_comments_path(post), class: 'btn btn-warning' %>
+              <%= link_to t( 'new_comment'), new_post_comment_path(post), class: 'btn btn-warning' %>
 
-              <%= button_to 'Archived', change_status_post_path(post, new_status: 2), class: 'btn btn-sm btn-info', method: :patch %>
-              <%= button_to 'Unpublished', change_status_post_path(post, new_status: 1), class: 'btn btn-sm btn-info', method: :patch %>
-              <%= button_to 'Published', change_status_post_path(post, new_status: 0), class: 'btn btn-sm btn-info', method: :patch %>
+              <%= button_to t( 'archived'), change_status_post_path(post, new_status: 2), class: 'btn btn-sm btn-info', method: :patch %>
+              <%= button_to t( 'unpublished'), change_status_post_path(post, new_status: 1), class: 'btn btn-sm btn-info', method: :patch %>
+              <%= button_to t( 'published'), change_status_post_path(post, new_status: 0), class: 'btn btn-sm btn-info', method: :patch %>
 
             </td>
           </tr>
