--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -56,8 +56,8 @@
             <td><%= post.user&.name %></td>
             <td><%= post.title %></td>
             <td><%= post.content %></td>
-            <td><%= post.created_at %></td>
-            <td><%= post.updated_at %></td>
+            <td><%= post.created_at.strftime("%m/%d/%Y -  %I:%M %p") %></td>
+            <td><%= post.updated_at.strftime("%m/%d/%Y -  %I:%M %p") %></td>
             <td><%= post.categories.pluck(:name).join(',') %></td>
             <td><%= post.status %></td>
             <td><%= "#{post&.region&.name}, #{post&.province&.name}, #{post&.city&.name}, #{post&.barangay&.name}, #{post.address}" %></td>
